<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose"
        android:textColor="#7FCFE9"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#7DCAE0"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="left|center"
        android:background="#FAFAFA"
        android:text="@string/choose_phone"
        android:id="@+id/tvTel"
        android:paddingLeft="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDCE0"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="left|center"
        android:background="#FAFAFA"
        android:text="@string/choose_sms"
        android:id="@+id/tvSms"
        android:paddingLeft="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDCE0"/>


</LinearLayout>